--- a/src/styles/AppDesert.scss
+++ b/src/styles/AppDesert.scss
@@ -249,6 +249,9 @@
     }
   }
 
+  .clockExpired {
+    background-image: url(../assets/alarmdark.png);
+  }
 
   .reportTitle {
     margin: -21px;
