--- a/src/styles/AppLight.scss
+++ b/src/styles/AppLight.scss
@@ -189,6 +189,10 @@
     border-bottom-right-radius: 0px;
   }
 
+  .clockExpired {
+    background-image: url(../assets/alarmdark.png);
+  }
+  
   .waga1 {
     background-color: rgba(255, 0, 34, 0.5);
     border-color: #885151ab;
